Update gradle and fix configs